[package]
name = "metro-loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "=0.3.24", default-features = false }
#quad-snd = "=0.2.8"
juquad = { git = "https://github.com/jmmut/juquad.git", tag = "0.12.2" }
#juquad = { path = "../juquad/" }

[profile.release]
strip = true
lto = true
