[package]
name = "metro-loop"
version = "0.1.0"
edition = "2021"
default-run = "metro-loop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "=0.3.24", default-features = false }
#quad-snd = "=0.2.8"
juquad = { git = "https://github.com/jmmut/juquad.git", tag = "0.13.2" }
#juquad = { path = "../juquad/" }

[profile.release]
strip = true
lto = true

[lints.clippy]
needless_borrow = "allow"
collapsible_if = "allow"
clone_on_copy = "allow"
new_without_default = "allow"
should_implement_trait = "allow"
